objects/Artifact_Version__c.object
<CustomObject>
    <fields>
        <fullName>Artifact__c</fullName>
        <label>Artifact</label>
        <referenceTo>Artifact__c</referenceTo>
        <relationshipLabel>Artifact Versions</relationshipLabel>
        <relationshipName>Artifact_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <formula>TEXT(Release__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Artifact Versions</relationshipLabel>
        <relationshipName>Artifact_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>Release__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_In_Git__c</fullName>
        <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c )), Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c != &apos;&apos;),
		IF(
			AND(NOT(ISPICKVAL(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c +  Version__c,
			IF(
				CONTAINS(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c,&apos;[TAG_NAME]&apos;),
				SUBSTITUTE(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c,&apos;[TAG_NAME]&apos;,Version__c),
				Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c + Version__c
			)
		),
	&apos;&apos;), 
	Version__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View In Git</label>
        <type>Text</type>
    </fields>
    <label>Artifact Version</label>
    <nameField>
        <label>Artifact Versions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifact Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>